--- a/seeing-sound.csproj
+++ b/seeing-sound.csproj
@@ -285,6 +285,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\callAnim.cs" />
+    <Compile Include="Assets\callAnimWood.cs" />
     <Compile Include="Assets\Scripts\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Test.cs" />
     <Compile Include="Assets\SteamVR\Extras\SteamVR_GazeTracker.cs" />
